--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@
     --bgnd-color-disponible: #74C4D7; /* azul */
     --txt-color-disponible: rgb(0, 0, 0); /* texto negro para contraste */
 
-    --bgnd-color-cursando: #E6B10E; /* naranja */
+    --bgnd-color-cursando: #c4882e; /* naranja */
     --txt-color-cursando: black;
 
-    --bgnd-color-regular: #d39332; /* marrón */
+    --bgnd-color-regular: #E6B10E; /* marrón */
     --txt-color-regular: black;
 
     --bgnd-color-bloqueada: #bdbdbd; /* gris */
@@ -31,7 +31,7 @@
     /* Colores acciones de materias */
     --bgnd-color-anotarse: #66BB6A; /* verde para anotarse */
     --bgnd-color-abandonar: #DE4343; /* rojo para desanotarse */
-    --bgnd-color-ver-programa: #aaebae; /* verde para ver programa */
+    --bgnd-color-ver-programa: #d4a56c; /* verde para ver programa */
 }
 
 /* Página tipo diapositiva centrada */
