--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ html, body {
 
 header {
     background-color: var(--bgnd-color-header);
-    width: 100%; /* usa viewport width para respetar padding */
+    width: 100vw; /* usa viewport width para respetar padding */
     color: var(--txt-color-header);
     display: flex;
     justify-content: flex-end; /* título a la izquierda, selector a la derecha */
@@ -534,6 +534,20 @@ a {
         width: auto !important;
         max-width: 90vw !important;
         transform: none !important;
+    }
+}
+
+/* --- RESPONSIVE --- */
+@media (max-width: 1600px) and (min-width: 901px) {
+    .scroll-x {
+        overflow-x: auto !important;
+        max-width: 100vw;
+        padding-right: 24px;
+    }
+
+    header {
+        width: 100%;
+        padding-right: 50px;
     }
 }
 
