--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ a {
 .nombre-materia {
     display: flex;
     align-items: center;
-    font-size: 15px;
+    font-size: 1rem;
     gap: 8px;
     justify-content: center;
 }
